Fix: Expand control icon misalignment when used with SemanticUI and the `compact` class
- Applied to the base stylesheet as this could effect all of them
- Fixes DataTables/DataTables #925

--- a/css/responsive.dataTables.scss
+++ b/css/responsive.dataTables.scss
@@ -22,6 +22,7 @@ $close-button-background: #d33333 !default;
 	box-shadow: 0 0 3px #444;
 	box-sizing: content-box;
 	text-align: center;
+	text-indent: 0 !important;
 
 	// Use Courier New because it is common and consistent
 	font-family: 'Courier New', Courier, monospace;
